# c-ray

./: .gitignore  CMakeLists.txt  Makefile
src/: main.c  raytrace.c  tp.c  tp.h  tp2.c  tp2.h
